--- a/register.html
+++ b/register.html
@@ -12,24 +12,32 @@
     <header class="navbar">
         <div class="logo">BookaDesk</div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="register.html">Register</a>
-            <a href="LOGIN.html">Login</a>
-            <a href="bookaspace.html">Book a Space</a>
-            <a href="mybooking.html">My Booking</a>
+          <a href="index.html">Home</a>
+      <a href="register.html">Register</a>
+      <a href="login.html">Login</a>
+      <a href="bookaspace-coworker.html">Coworker</a>
+      <a href="bookaspace-owner.html" class="active">Owner</a>
+      <a href="mybooking.html">My Booking</a>
             <button class="join-btn" onclick="window.location.href='bookaspace.html'">Book Now</button>
         </nav>
     </header>
-    <main class="register-container">
-        <h2>Register</h2>
-        <form id="registerForm">
-            <input type="text" id="fullName" placeholder="Full Name" required>
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Register</button>
-        </form>
-        <p>Already have an account? <a href="#">Login here</a></p>
-    </main>
+      <main class="register-container">
+    <h2>Register</h2>
+    <form id="registerForm">
+      <input type="text" id="fullName" placeholder="Full Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" pattern="^\+?\d{10,15}$" title="Enter valid phone number" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <select id="role" required>
+        <option value="" disabled selected>Select role</option>
+        <option value="owner">Owner</option>
+        <option value="coworker">Coworker</option>
+      </select>
+      <input type="password" id="password" placeholder="Password (min 8 chars, incl. letters, numbers, symbols)" required />
+      <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
+      <button type="submit">Register</button>
+    </form>
+    <p id="registerMessage"></p>
+  </main>
     <footer class="footer">
         <div class="footer-left">
             <strong>BookaDesk</strong>
