--- a/index.html
+++ b/index.html
@@ -1,126 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookaDesk</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book A Space - Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <div class="logo">BookaDesk</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="Register.html">Register</a>
-            <a href="Login.html">Login</a>
-            <a href="BookaSpace.html">BookaSpace</a>
-            <a href="mybooking.html">My Booking</a>
-            <button class="join-btn">Book Now</button>
-        </nav>
-    </header>
+  <header>
+    <h1>Book A Space</h1>
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="register.html">Register</a>
+      <a href="login.html">Login</a>
+      <a href="bookaspace-coworker.html">Coworker</a>
+      <a href="bookaspace-owner.html">Owner</a>
+      <a href="mybooking.html">My Booking</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Find your perfect workspace</h2>
     <div class="search-bar">
-        <input type="text" placeholder="Search">
+      <input type="text" placeholder="Search coworking spaces...">
     </div>
-    <div class="content">
-        <div class="section">
-            <h2>Properties for you:</h2>
+    <button class="join-btn" onclick="window.location.href='bookaspace-coworker.html'">Book Now</button>
+  </section>
 
-            <div class="properties-grid">
-                <div class="property-card">
-                    <img src="images/privateoffice.jpg" alt="Private Office">
-                    <h4>Private Office</h4>
-                    <ul>
-                        <li>Fully-equipped</li>
-                        <li>Private and locable</li>
-                        <li>Ready to move in</li>
-                        <li>Customisable Private offices</li>
-                    </ul>
-                </div>
-                <div class="property-card">
-                    <img src="images/mettingroom.jpg" alt="metting Room">
-                    <h4>Metting Room</h4>
-                    <ul>
-                        <li>Fully-equipped</li>
-                        <li>Customisable private offices</li>
-                        <li>Low Capital and operational expense</li>
-                    </ul>
-                </div>
-                <div class="property-card">
-                    <img src="images/managedoffice.avif" alt="Managed Office">
-                    <h4>Managed Office</h4>
-                    <ul>
-                        <li>End-to-end office space</li>
-                        <li>Sustainable and scable workspace solutions</li>
-                        <li>Operated for your business</li>
-                    </ul>
-                </div>
-                <div class="property-card">
-                    <img src="images/CoworkingSpaces.webp" alt="Coworking Spaces">
-                    <h4>Coworking Spaces</h4>
-                    <ul>
-                        <li>Productive Coworking Space</li>
-                        <li>Cost-effictive</li>
-                        <li>Ondemand workspace</li>
-                    </ul>
-                </div>
-                <div class="property-card">
-                    <img src="images/Private MeetUp.avif" alt="Private MeetUp">
-                    <h4>Metting Room</h4>
-                    <ul>
-                        <li>Fully-equipped</li>
-                        <li>Small and causy space</li>
-                        <li>Low Capital and flixible</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="section">
-                <h2>Workspaces Nearby:</h2>
-                <div class="properties-grid">
-                    <div class="property-card">
-                        <img src="images/workspaceFirst.avif" alt="Workspace 1">
-                        <div>Capacity: <a href="#">View Details:</a></div>
-                    </div>
-                    <div class="property-card">
-                        <img src="images/workspaceSecond.webp" alt="Workspace 2">
-                        <div>Capacity: <a href="#">View Details:</a></div>
-                    </div>
-                     <div class="property-card">
-                        <img src="images/workspaceThird.avif" alt="Workspace 3">
-                        <div>Capacity: <a href="#">View Details:</a></div>
-                    </div>
-                     <div class="property-card">
-                        <img src="images/workspaceFourth.avif" alt="Workspace 4">
-                        <div>Capacity: <a href="#">View Details:</a></div>
-                    </div>
-                     <div class="property-card">
-                        <img src="images/workspaceFifth.avif" alt="Workspace 5">
-                        <div>Capacity: <a href="#">View Details:</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <section class="properties">
+    <h3>Featured Properties</h3>
+    <div class="property-card">
+      <img src="images/workspaceFirst.avif" alt="Workspace One">
+      <h4>Downtown Hub</h4>
+      <p>Modern coworking hub in the city center.</p>
+      <a href="#">View Details</a>
     </div>
+    <div class="property-card">
+      <img src="images/workspaceSecond.webp" alt="Workspace Two">
+      <h4>Mission Loft</h4>
+      <p>Quiet private offices and meeting rooms.</p>
+      <a href="#">View Details</a>
     </div>
+    <div class="property-card">
+      <img src="images/workspaceThird.avif" alt="Workspace Three">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a>
+    </div>
+    <div class="property-card">
+      <img src="images/workspaceFourth.avif" alt="Workspace Four">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a>
+    </div>
+    <div class="property-card">
+      <img src="images/workspaceFifth.avif" alt="Workspace Five">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a>
+    </div>
+    <div class="property-card">
+      <img src="images/privateoffice.jpg" alt="Workspace Six">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a>
+    </div>
+    <div class="property-card">
+      <img src="images/Private MeetUp.avif" alt="Workspace Seven">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a></div>
+      <div class="property-card">
+      <img src="images/mettingroom.jpg" alt="Workspace Eight">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a></div>
+      <div class="property-card">
+      <img src="images/managedoffice.avif" alt="Workspace Nine">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a></div>
+      <div class="property-card">
+      <img src="images/CoworkingSpaces.webp" alt="Workspace Ten">
+      <h4></h4>
+      <p></p>
+      <a href="#">View Details</a></div>
+  </section>
 
-    <section class="Workspace">
+  <footer>
+    <p>&copy; 2025 Book A Space</p>
+  </footer>
 
-        <footer class="footer">
-            <div class="footer-left">
-                <strong>BookaDesk</strong><br>
-                <p>Where work meets convenience</p>
-            </div>
-            <div class="footer-links">
-                <a href="#">Desk</a>
-                <a href="#">Conference Room</a>
-                <a href="#">Office</a>
-                <a href="#">Contact Us</a>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="footer-bottom">BookaSpace © 2025. All rights reserved.</div>
-        </footer>
+  <script src="script.js"></script>
 </body>
-
 </html>
